home info section done. started features

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -59,6 +59,27 @@ p{
   color: #333;
 }
 
+.btn-light {
+  background: #f4f4f4;
+  color: #333;
+}
+
+.bg-dark {
+  background: #333;
+  color: #fff;
+}
+
+.bg-light {
+  background: #f4f4f4;
+  color: #333;
+}
+
+.bg-primary {
+  background: #f7c08a;
+  color: #333;
+}
+
+
 /* Navbar */
 #navbar{
   background-color: #333;
@@ -116,3 +137,31 @@ p{
   padding-bottom: 20px;
   line-height: 1.7em;
 }
+
+/* Home info */
+
+#home-info{
+  height: 400px;
+}
+
+#home-info .info-img{
+  float: left;
+  width: 50%;
+  background: url('../img/photo-1.jpg') no-repeat;
+  min-height: 100%;
+}
+
+#home-info .info-content{
+  float: right;
+  width: 50%;
+  height: 100%;
+  text-align: center;
+  padding: 50px 30px;
+  overflow: hidden;
+}
+
+#home-info .info-content p{
+  padding-bottom: 12px;
+}
+
+/* Features */
