--- a/CSS/style.css
+++ b/CSS/style.css
@@ -79,6 +79,10 @@ p{
   color: #333;
 }
 
+.clr{
+  clear: both;
+}
+
 
 /* Navbar */
 #navbar{
@@ -165,3 +169,23 @@ p{
 }
 
 /* Features */
+
+.box{
+  float: left;
+  width: 33.3%;
+  padding: 50px;
+  text-align: center;
+}
+
+.box i{
+  margin-bottom: 10px;
+}
+
+/* Footer */
+
+#main-footer{
+  text-align: center;
+  background: #444;
+  color: #fff;
+  padding: 20px;
+}
