--- a/CSS/mobile.css
+++ b/CSS/mobile.css
@@ -12,6 +12,17 @@
   border-bottom: #444 dotted 1px;
 }
 
+/* Showcase */
+
+#showcase{
+  height: 100%;
+}
+
+#showcase .showcase-content{
+  padding-top: 70px;
+  padding-bottom: 30px;
+}
+
 /* Home info */
 
 #home-info .info-img{
@@ -28,4 +39,25 @@
 .box{
   float: none;
   width: 100%;
+}
+
+/* About */
+#about-info .info-left,#about-info .info-right{
+  float: none;
+  width: 100%;
+}
+
+#about-info .info-right{
+  margin-top: 30px;
+}
+
+
+.l-heading{
+  text-align: center;
+}
+
+/* Contact */
+
+#contact-info .box{
+  border-bottom: #444 dotted 1px;
 }
