--- a/CSS/style.css
+++ b/CSS/style.css
@@ -99,6 +99,7 @@ p{
 /* heading */
 .l-heading{
   font-size: 40px;
+  line-height: 1.2;
 }
 
 /* Navbar */
@@ -210,6 +211,7 @@ p{
   width: 70%;
   display: block;
   border-radius: 50%;
+  margin: auto;
 }
 #about-info .info-left{
   float: left;
@@ -218,7 +220,7 @@ p{
 }
 
 #testimonials{
-  height: 600px;
+  height: 100%;
   background: url('../img/test-bg.jpg') no-repeat center center/cover;
 }
 
